--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app{
+  background-color: #159895;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.calculator{
+  height:600px;
+  width:350px;
+  box-shadow:1px -1px 20px rgba(0,0,0,0.50);
+  border-radius: 20px;
+}
+.header{
+  height:200px;
+  background-color: #1A5F7A;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  padding:20px;
+  overflow-y: scroll;
 }
 
-.App-link {
-  color: #61dafb;
+.Keypad{
+  height:330px;
+  background-color:  #002B5B;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  padding: 20px;
+  display:flex;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header p{
+  margin: 0;
+  font-size: 1rem;
+  line-height: 1.75rem;
+  display: flex;
+  justify-content: end;
+  color:#ECF9FF;
 }
+.expression{
+  overflow-x: scroll;
+  width:100%;
+}
+.expression p{
+  white-space: nowrap;
+  min-width: 100%;
+  width:fit-content;
+  font-weight: bolder;
+  font-size: 1.3rem;
+  min-height: 30px;
+}
+.result p{
+  font-size: 1.3rem;
+  font-weight: bolder;
+  min-height: 30px;
+}
+.custom-scroll::-webkit-scrollbar{
+  height: 5px;
+  width: 5px;
+}
+.custom-scroll::-webkit-scrollbar-track{
+  background-color:transparent;
+}
+.custom-scroll::-webkit-scrollbar-thumb{
+ background-color:#002B5B ;
+ border-radius: 20px;
+}
+.custom-scroll::-webkit-scrollbar-thumb:hover{
+  background-color:black ;
+ }
+ .Keypad p{
+  margin: 0;
+  line-height: 1.875rem;
+  font-size: 1.8rem;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  transition:200ms;
+  cursor: pointer;
+  user-select: none;
+ }
+ .keys{
+  flex:3;
+  display:flex;
+  flex-wrap: wrap;
+ }
+ .keys p{
+  width:33%;
+  height:25%;
+  color:#9CB4CC;
+ }
+ .keys p:active{
+  background-color: #BAD7E9;
+ }
+ .symbols{
+  flex:1;
+ }
+ .symbols p{
+  color:#146C94;
+  height:20%;
+  width:100%;
+ }
+ h3{
+  position:fixed;
+  top:280px;
+  margin: 0;
+  cursor: pointer;
+ }
